# megarover_description

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
f120a_description/launch/: controller.launch  controller.yaml  gazebo.launch  urdf.rviz
f120a_description/urdf/: f120a.gazebo  f120a.xacro  materials.xacro
launch/: display.launch  f120a_view.launch.py  mega3_view.launch.py
mega3_description/launch/: controller.launch  controller.yaml  gazebo.launch
mega3_description/urdf/: materials.xacro  mega3.gazebo  mega3.xacro
meshes/f120a/: base_link.stl  left_wheel_1.stl  right_wheel_1.stl
meshes/mega3/: base_link.stl  left_wheel_1.stl
rviz/: f120a.rviz  mega3.rviz
urdf/: f120a.gazebo  f120a.xacro  f120a_base_model.gazebo  f120a_base_model.xacro  f120a_bumper.xacro  f120a_depthcam.xacro  f120a_lrf.xacro  f120a_lrf_depthcam.xacro  mega3.gazebo  mega3.xacro  mega3_base_model.gazebo  mega3_base_model.xacro  mega3_bumper.xacro  mega3_depthcam.xacro  mega3_lrf.xacro  mega3_lrf_depthcam.xacro
