<?xml version="1.0"?>
<package format="2">
  <name>megarover_description</name>
  <version>1.0.0</version>
  <description>3D model of Vstone Megarover3.0 and Megarover F120A for simulation and visualization</description>

  <maintainer email="infodesk@vstone.co.jp">Vstone</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
